<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.difrango</groupId>
  <artifactId>WorkoutParser</artifactId>
  <version>1.0-SNAPSHOT</version>
  <description>This project parses the workout files that Chris Gates Fitness Produces for his clients</description>

  <properties>
    <error.prone.version>2.36.0</error.prone.version>
    <jcommander.version>2.0</jcommander.version>
    <jdk.version>21</jdk.version>
    <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
    <poi.ooxml.version>5.4.0</poi.ooxml.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <slf4j.error.prone.version>0.1.28</slf4j.error.prone.version>
    <sortpom.maven.plugin.version>4.0.0</sortpom.maven.plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>${poi.ooxml.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jcommander</groupId>
      <artifactId>jcommander</artifactId>
      <version>${jcommander.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
        <version>${sortpom.maven.plugin.version}</version>
        <configuration>
          <createBackupFile>false</createBackupFile>
          <predefinedSortOrder>custom_1</predefinedSortOrder>
          <lineSeparator>\n</lineSeparator>
          <sortProperties>true</sortProperties>
          <sortDependencies>scope,groupId,artifactId</sortDependencies>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>sort</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
          <release>${jdk.version}</release>
          <encoding>UTF-8</encoding>
          <compilerArgs>
            <arg>-XDcompilePolicy=simple</arg>
            <arg>--should-stop=ifError=FLOW</arg>
            <arg>-Xplugin:ErrorProne</arg>
            <arg>--enable-preview</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>com.google.errorprone</groupId>
              <artifactId>error_prone_core</artifactId>
              <version>${error.prone.version}</version>
            </path>
            <path>
              <groupId>jp.skypencil.errorprone.slf4j</groupId>
              <artifactId>errorprone-slf4j</artifactId>
              <version>${slf4j.error.prone.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
